--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-toolbar></app-toolbar>
 <section class="content">
-  <app-menu></app-menu>
-  <app-item-list class="container__cards"></app-item-list>
+  <app-student-list></app-student-list>
 </section>
