--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,3 +1,3 @@
 <section class="toolbar">
-  <h1 class="toolbar__title">My Music 🎼</h1>
+  <h1 class="toolbar__title">My students 📕</h1>
 </section>
