--- a/src/app/components/student-list/student-list.component.css
+++ b/src/app/components/student-list/student-list.component.css
@@ -1,32 +1,24 @@
-table {
+.table__custom {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
 
-table td,
+.container__input {
+  background-color: #424242;
+  padding: 1rem;
+  color: white;
+}
+
 table th {
-  border: 1px solid #ddd;
+  padding: 0 1rem;
+}
+
+table td {
+  border: 1px solid transparent;
   padding: 8px;
 }
 
-table tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-table tr:hover {
-  background-color: #ddd;
-}
-
-table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #04aa6d;
-  color: white;
-}
-
-.reproved {
-  background-color: #ff1122;
-  color: white;
+button:hover {
+  color: gray;
 }
