--- a/src/app/components/editar-dialog/editar-dialog.component.html
+++ b/src/app/components/editar-dialog/editar-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Editar curso</h1>
+<h1 mat-dialog-title>Formulario</h1>
 <section mat-dialog-content>
   <form [formGroup]="formulario">
     <mat-form-field appearance="fill" class="input-group">
@@ -37,5 +37,5 @@
 </section>
 <section mat-dialog-actions>
   <button mat-button (click)="cerrar()">Cerrar</button>
-  <button mat-button (click)="actualizar()">Actualizar</button>
+  <button mat-button (click)="actualizar()">Aceptar</button>
 </section>
