--- a/src/app/components/student-list/student-list.component.html
+++ b/src/app/components/student-list/student-list.component.html
@@ -6,6 +6,12 @@
   </mat-form-field>
 </div>
 
+<div class="container__input">
+  <button (click)="addStudent()" mat-raised-button color="warn">
+    Agregar alumno
+  </button>
+</div>
+
 <table class="table-dark table__custom" mat-table [dataSource]="dataSource">
   <!-- comision -->
   <ng-container matColumnDef="comision">
